# adpro-mcgs

./: .gitmodules  README.md
Lecture 1/: README.md
Lecture 2/: .exercise lec2.cpp.kate-swp  CMakeLists.txt  README.md  exercise lec2.cpp  lec2  loop  loop-ex  loop-exercises.cpp  result.txt  sorting-times.cpp
Lecture 3/: CMakeLists.txt  README.md  lecture3.cpp
alfBots/: CMakeLists.txt  main.cpp
